--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,19 @@
         "symfony/console": "^3.4",
         "symfony/flex": "^1.0",
         "symfony/form": "^3.4",
-        "symfony/framework-bundle": "^3.4",
         "symfony/lts": "^3",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^3.4",
         "symfony/profiler-pack": "^1.0",
+        "symfony/security-bundle": "^3.4",
         "symfony/twig-bundle": "^3.4",
         "symfony/validator": "^3.4",
-        "symfony/web-server-bundle": "^3.4",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
-        "symfony/dotenv": "^3.4"
+        "symfony/dotenv": "^3.4",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^3.4",
+        "symfony/web-server-bundle": "^3.4"
     },
     "config": {
         "preferred-install": {
