--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -3,7 +3,7 @@ parameters:
     # This allows you to run cache:warmup even if your
     # environment variables are not available yet.
     # You should not need to change this value.
-    env(DATABASE_URL): ''
+    env(DATABASE_URL): 'mysql://%db_user%:%db_password%@%db_host%:3306/%db_name%'
 
 doctrine:
     dbal:
@@ -13,7 +13,7 @@ doctrine:
         charset: utf8mb4
 
         # With Symfony 3.3, remove the `resolve:` prefix
-        url: '%env(resolve:DATABASE_URL)%'
+        url: '%env(DATABASE_URL)%'
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
