--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,6 +25,9 @@ security:
             logout:
                 path:   /logout
                 target: /
+            remember_me:
+                secret:   '%secret%'
+                lifetime: 604800 # 1 week in seconds
 
     access_control:
         - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
