--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,19 +1,13 @@
 parameters:
-    # Adds a fallback DATABASE_URL if the env var is not set.
-    # This allows you to run cache:warmup even if your
-    # environment variables are not available yet.
-    # You should not need to change this value.
-    env(DATABASE_URL): 'mysql://%db_user%:%db_password%@%db_host%:3306/%db_name%'
+    #
 
 doctrine:
     dbal:
         # configure these for your database server
-        driver: '%db_driver%'
+        driver: '%env(DB_DRIVER)%'
         server_version: '5.7'
         charset: utf8mb4
-
-        # With Symfony 3.3, remove the `resolve:` prefix
-        url: '%env(DATABASE_URL)%'
+        url: 'mysql://%env(DB_USER)%:%env(DB_PASSWORD)%@%env(DB_HOST)%:3306/%env(DB_NAME)%'
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
