Add html template for admin area

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,7 +26,7 @@ security:
                 path:   /logout
                 target: /
             remember_me:
-                secret:   '%env(SECRET)%'
+                secret:   '%env(APP_SECRET)%'
                 lifetime: 604800 # 1 week in seconds
 
     access_control:
