--- a/.env.dist
+++ b/.env.dist
@@ -14,15 +14,17 @@ APP_SECRET=95c26a583cf5e78641236072c51396d9
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 # DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
-###< doctrine/doctrine-bundle ###
 DB_DRIVER=pdo_mysql
 DB_HOST='localhost'
 DB_PORT=null
 DB_NAME='db_name'
 DB_USER=root
 DB_PASSWORD=''
-SECRET='ThisTokenIsNotSoSecretChangeIt'
+###< doctrine/doctrine-bundle ###
+
+###> Mailer ###
 MAILER_TRANSPORT='smtp'
 MAILER_HOST='127.0.0.1:1025'
-MAILER_USER='null=''
-MAILER_PASSWORD='null'
+MAILER_USER=null
+MAILER_PASSWORD=null
+###< Mailer ###
