--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,8 @@
 #    defaults: { _controller: 'App\Controller\DefaultController::index' }
 logout:
     path: /logout
+
+admin_area:
+    resource: ../src/Controller/AdminArea/
+    type:     annotation
+    prefix:   /a
