--- a/composer.json
+++ b/composer.json
@@ -2,27 +2,30 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.0.8",
-        "doctrine/doctrine-migrations-bundle": "^1.3",
+        "php": "^7.2",
+        "doctrine/doctrine-migrations-bundle": "^2.0",
         "doctrine/orm": "^2.6",
-        "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "^3.4",
-        "symfony/console": "^3.4",
-        "symfony/flex": "^1.0",
-        "symfony/form": "^3.4",
-        "symfony/lts": "^3",
+        "sensio/framework-extra-bundle": "^5.5",
+        "symfony/asset": "^4.3",
+        "symfony/cache": "4.3.*",
+        "symfony/console": "^4.3",
+        "symfony/flex": "^1.4",
+        "symfony/form": "^4.3",
+        "symfony/monolog-bundle": "^3.4",
         "symfony/profiler-pack": "^1.0",
-        "symfony/security-bundle": "^3.4",
-        "symfony/twig-bundle": "^3.4",
-        "symfony/validator": "^3.4",
-        "symfony/webpack-encore-pack": "^1.0",
-        "symfony/yaml": "^3.4"
+        "symfony/security-bundle": "^4.3",
+        "symfony/translation": "4.3.*",
+        "symfony/twig-bridge": "^4.3",
+        "symfony/validator": "^4.3",
+        "symfony/webpack-encore-bundle": "^1.7",
+        "symfony/yaml": "^4.3"
     },
     "require-dev": {
-        "symfony/dotenv": "^3.4",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^3.4",
-        "symfony/web-server-bundle": "^3.4"
+        "symfony/dotenv": "^4.3",
+        "symfony/maker-bundle": "^1.14",
+        "symfony/phpunit-bridge": "^4.3",
+        "symfony/var-dumper": "4.3.*",
+        "symfony/web-server-bundle": "^4.3"
     },
     "config": {
         "preferred-install": {
@@ -58,7 +61,8 @@
     "extra": {
         "symfony": {
             "id": "01C38A85YR0FE60NSWG3HTGFNG",
-            "allow-contrib": false
+            "allow-contrib": false,
+            "require": "4.3.*"
         }
     }
 }
