--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ###> symfony/framework-bundle ###
-.env
+/.env.local
+/.env.*.local
 /public/bundles/
 /var/
 /vendor/
@@ -23,3 +24,10 @@ toInstall.txt
 .DS_Store
 
 /config/packages/parameters.yaml
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
