--- a/config/packages/webpack_encore.yaml
+++ b/config/packages/webpack_encore.yaml
@@ -4,6 +4,9 @@ webpack_encore:
     output_path: '%kernel.project_dir%/public/build'
     # If multiple builds are defined (as shown below), you can disable the default build:
     # output_path: false
+    builds:
+        appConfig: '%kernel.project_dir%/public/build/app'
+        adminConfig: '%kernel.project_dir%/public/build/admin'
 
     # if using Encore.enableIntegrityHashes() specify the crossorigin attribute value (default: false, or use 'anonymous' or 'use-credentials')
     # crossorigin: 'anonymous'
