--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.17.0",
-        "node-sass": "^4.7.2",
-        "sass-loader": "^6.0.6"
+        "@symfony/webpack-encore": "^0.28.0",
+        "node-sass": "^4.13.0",
+        "sass-loader": "^7.0.1"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -11,5 +11,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.11.2",
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.4.1",
+        "popper.js": "^1.16.0"
     }
 }
