Add composer package

--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,18 @@
         "symfony/flex": "^1.4",
         "symfony/form": "^4.3",
         "symfony/monolog-bundle": "^3.4",
+        "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "^4.3",
         "symfony/translation": "4.3.*",
         "symfony/twig-bridge": "^4.3",
+        "symfony/twig-pack": "^1.0",
         "symfony/validator": "^4.3",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "^4.3"
     },
     "require-dev": {
+        "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "^4.3",
         "symfony/maker-bundle": "^1.14",
         "symfony/phpunit-bridge": "^4.3",
