--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ APP_SECRET=95c26a583cf5e78641236072c51396d9
 DB_DRIVER=pdo_mysql
 DB_HOST=localhost
 DB_PORT=null
-DB_NAME=sf3
+DB_NAME=gcommerce
 DB_USER=root
 DB_PASSWORD=root
 ###< doctrine/doctrine-bundle ###
