--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,14 @@
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "^4.3",
+        "symfony/security-csrf": "4.3.*",
         "symfony/translation": "4.3.*",
         "symfony/twig-bridge": "^4.3",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "^4.3",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "^4.3"
+        "symfony/yaml": "^4.3",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
         "symfony/debug-pack": "^1.0",
