Composer.json updated for validation JSON schema

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+    "name": "cygenc/test-symfony",
+    "description": "Project to test Symfony",
+    "version": "1.0.0-dev",
     "type": "project",
     "license": "proprietary",
     "require": {
