--- a/composer.json
+++ b/composer.json
@@ -9,31 +9,31 @@
         "doctrine/doctrine-migrations-bundle": "^2.0",
         "doctrine/orm": "^2.6",
         "sensio/framework-extra-bundle": "^5.5",
-        "symfony/asset": "^4.3",
-        "symfony/cache": "4.3.*",
-        "symfony/console": "^4.3",
+        "symfony/asset": "^4.4",
+        "symfony/cache": "^4.4",
+        "symfony/console": "^4.4",
         "symfony/flex": "^1.4",
-        "symfony/form": "^4.3",
+        "symfony/form": "^4.4",
         "symfony/monolog-bundle": "^3.4",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
-        "symfony/security-bundle": "^4.3",
-        "symfony/security-csrf": "4.3.*",
-        "symfony/translation": "4.3.*",
-        "symfony/twig-bridge": "^4.3",
+        "symfony/security-bundle": "^4.4",
+        "symfony/security-csrf": "^4.4",
+        "symfony/translation": "^4.4",
+        "symfony/twig-bridge": "^4.4",
         "symfony/twig-pack": "^1.0",
-        "symfony/validator": "^4.3",
+        "symfony/validator": "^4.4",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "^4.3",
+        "symfony/yaml": "^4.4",
         "twig/extensions": "^1.5"
     },
     "require-dev": {
         "symfony/debug-pack": "^1.0",
-        "symfony/dotenv": "^4.3",
+        "symfony/dotenv": "^4.4",
         "symfony/maker-bundle": "^1.14",
-        "symfony/phpunit-bridge": "^4.3",
-        "symfony/var-dumper": "4.3.*",
-        "symfony/web-server-bundle": "^4.3"
+        "symfony/phpunit-bridge": "^4.4",
+        "symfony/var-dumper": "^4.4",
+        "symfony/web-server-bundle": "^4.4"
     },
     "config": {
         "preferred-install": {
@@ -70,7 +70,7 @@
         "symfony": {
             "id": "01C38A85YR0FE60NSWG3HTGFNG",
             "allow-contrib": false,
-            "require": "4.3.*"
+            "require": "^4.4"
         }
     }
 }
