--- a/composer.json
+++ b/composer.json
@@ -6,33 +6,36 @@
     "license": "proprietary",
     "require": {
         "php": "^7.2",
+        "doctrine/doctrine-bundle": "^2.0",
         "doctrine/doctrine-migrations-bundle": "^2.0",
-        "doctrine/orm": "^2.6",
+        "doctrine/orm": "^2.7",
         "sensio/framework-extra-bundle": "^5.5",
-        "symfony/asset": "^4.4",
-        "symfony/cache": "^4.4",
-        "symfony/console": "^4.4",
+        "symfony/asset": "^5.0",
+        "symfony/cache": "^5.0",
+        "symfony/console": "^5.0",
         "symfony/flex": "^1.4",
-        "symfony/form": "^4.4",
+        "symfony/form": "^5.0",
         "symfony/monolog-bundle": "^3.4",
-        "symfony/orm-pack": "^1.0",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/security-bundle": "^4.4",
-        "symfony/security-csrf": "^4.4",
-        "symfony/translation": "^4.4",
-        "symfony/twig-bridge": "^4.4",
-        "symfony/twig-pack": "^1.0",
-        "symfony/validator": "^4.4",
+        "symfony/security-bundle": "^5.0",
+        "symfony/security-csrf": "^5.0",
+        "symfony/stopwatch": "^5.0",
+        "symfony/translation": "^5.0",
+        "symfony/twig-bridge": "^5.0",
+        "symfony/twig-bundle": "^5.0",
+        "symfony/validator": "^5.0",
+        "symfony/web-profiler-bundle": "^5.0",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "^4.4",
-        "twig/extensions": "^1.5"
+        "symfony/yaml": "^5.0",
+        "twig/extra-bundle": "^3.0",
+        "twig/intl-extra": "^3.0",
+        "twig/twig": "^3.0"
     },
     "require-dev": {
         "symfony/debug-pack": "^1.0",
-        "symfony/dotenv": "^4.4",
+        "symfony/dotenv": "^5.0",
         "symfony/maker-bundle": "^1.14",
-        "symfony/phpunit-bridge": "^4.4",
-        "symfony/var-dumper": "^4.4",
+        "symfony/phpunit-bridge": "^5.0",
+        "symfony/var-dumper": "^5.0",
         "symfony/web-server-bundle": "^4.4"
     },
     "config": {
@@ -70,7 +73,7 @@
         "symfony": {
             "id": "01C38A85YR0FE60NSWG3HTGFNG",
             "allow-contrib": false,
-            "require": "^4.4"
+            "require": "^5.0"
         }
     }
 }
