--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -5,7 +5,6 @@ doctrine:
     dbal:
         # configure these for your database server
         driver: '%env(DB_DRIVER)%'
-        # server_version: '5.7'
         server_version: 'mariadb-10.3.16'
         charset: utf8mb4
         url: 'mysql://%env(DB_USER)%:%env(DB_PASSWORD)%@%env(DB_HOST)%:3306/%env(DB_NAME)%'
@@ -20,3 +19,9 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+            Domain:
+                is_bundle: false
+                type: annotation
+                dir: '%kernel.project_dir%/src/Domain'
+                prefix: 'App\Domain'
+                alias: Domain
