--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/flex": "^1.4",
         "symfony/form": "^5.0",
         "symfony/monolog-bundle": "^3.4",
+        "symfony/polyfill-uuid": "^1.17",
         "symfony/security-bundle": "^5.0",
         "symfony/security-csrf": "^5.0",
         "symfony/stopwatch": "^5.0",
@@ -31,6 +32,7 @@
         "twig/twig": "^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "^5.0",
         "symfony/maker-bundle": "^1.14",
