--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/doctrine-bundle": "^2.0",
         "doctrine/doctrine-migrations-bundle": "^2.0",
         "doctrine/orm": "^2.7",
+        "fzaninotto/faker": "^1.9",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/asset": "^5.0",
         "symfony/cache": "^5.0",
