--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
         "doctrine/doctrine-bundle": "^2.0",
         "doctrine/doctrine-migrations-bundle": "^2.0",
         "doctrine/orm": "^2.7",
-        "fzaninotto/faker": "^1.9",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/asset": "^5.0",
         "symfony/cache": "^5.0",
@@ -34,6 +33,8 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "fzaninotto/faker": "^1.9",
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "^5.0",
         "symfony/maker-bundle": "^1.14",
