--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.28.0",
-        "node-sass": "^4.13.0",
-        "sass-loader": "^8.0.0"
+        "@symfony/webpack-encore": "^0.30.2",
+        "node-sass": "^4.14.1",
+        "sass": "^1.26.7",
+        "sass-loader": "^8.0.2",
+        "webpack": "^4.43.0"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -13,9 +15,11 @@
         "build": "encore production"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.11.2",
-        "bootstrap": "^4.3.1",
-        "jquery": "^3.4.1",
-        "popper.js": "^1.16.0"
+        "@fortawesome/fontawesome-free": "^5.13.0",
+        "@popperjs/core": "^2.4.0",
+        "bootstrap": "^4.5.0",
+        "chokidar": "^3.4.0",
+        "jquery": "^3.5.1",
+        "yarn": "^1.22.4"
     }
 }
