--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ APP_SECRET=95c26a583cf5e78641236072c51396d9
 # DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 DB_DRIVER=pdo_mysql
 DB_HOST=localhost
-DB_PORT=null
+DB_PORT=3306
 DB_NAME=gcommerce
 DB_USER=root
 DB_PASSWORD=root
