--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,6 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
-
-###> symfony/web-server-bundle ###
-.web-server-pid
-###< symfony/web-server-bundle ###
-
 ###> symfony/webpack-encore-pack ###
 /node_modules/
 /public/build/
@@ -18,6 +13,7 @@
 ###> symfony/phpunit-bridge ###
 .phpunit
 /phpunit.xml
+/coverage
 ###< symfony/phpunit-bridge ###
 
 toInstall.txt
