--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,12 @@
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.9",
+        "symfony/browser-kit": "^5.0",
+        "symfony/css-selector": "^5.0",
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "^5.0",
         "symfony/maker-bundle": "^1.14",
-        "symfony/phpunit-bridge": "^5.0",
+        "symfony/phpunit-bridge": "^5.1",
         "symfony/var-dumper": "^5.0",
         "symfony/web-server-bundle": "^4.4"
     },
