--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -7,7 +7,7 @@ doctrine:
         driver: '%env(DB_DRIVER)%'
         server_version: 'mariadb-10.3.16'
         charset: utf8mb4
-        url: 'mysql://%env(DB_USER)%:%env(DB_PASSWORD)%@%env(DB_HOST)%:3306/%env(DB_NAME)%'
+        url: 'mysql://%env(DB_USER)%:%env(DB_PASSWORD)%@%env(DB_HOST)%:%env(DB_PORT)%/%env(DB_NAME)%'
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
