--- a/.env
+++ b/.env
@@ -14,17 +14,18 @@ APP_SECRET=95c26a583cf5e78641236072c51396d9
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 # DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
-DB_DRIVER=pdo_mysql
-DB_HOST=localhost
-DB_PORT=null
-DB_NAME=gcommerce
-DB_USER=root
-DB_PASSWORD=root
+# MYSQL_DRIVER=pdo_mysql
+MYSQL_HOST=db
+MYSQL_PORT=5432
+MYSQL_ROOT_PASSWORD=root
+MYSQL_DATABASE=gcommerce
+MYSQL_USER=gcommerce
+MYSQL_PASSWORD=gcommerce
 ###< doctrine/doctrine-bundle ###
 
 ###> Mailer ###
-MAILER_TRANSPORT=smtp
-MAILER_HOST=127.0.0.1:1025
-MAILER_USER=null
-MAILER_PASSWORD=null
+# MAILER_TRANSPORT=smtp
+# MAILER_HOST=127.0.0.1:1025
+# MAILER_USER=null
+# MAILER_PASSWORD=null
 ###< Mailer ###
